--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,7 @@
         "no-multi-spaces": [1],
         "no-multiple-empty-lines": [1,
             {
-                "max": 1,
+                "max": 2,
                 "maxBOF": 0,
                 "maxEOF": 0
             }
@@ -155,6 +155,7 @@
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-inferrable-types": [0],
         "@typescript-eslint/ban-types": [0],
+        "@typescript-eslint/ban-ts-comment": [0],
 
         "import/extensions": [0, "always"],
         "import/prefer-default-export": "off",
